--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "react-router-dom": "^5.2.0",
     "react-select": "^3.1.1",
     "react-text-mask-hoc": "^0.11.0",
+    "react-to-print": "^2.14.7",
     "react-toastify": "^7.0.3",
     "redux": "~4.0.5",
     "sass": "^1.52.3",
